--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,12 @@
 
   <exec_depend>move_base</exec_depend>
   <exec_depend>roscpp</exec_depend>
-  <depend>unitree_legged_msgs</depend>
+  <!-- <depend>unitree_legged_msgs</depend> -->
+  <depend>message_runtime</depend>
+  <depend>message_generation</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
  
   <!-- The export tag contains other, unspecified, tags -->
   <export>
